# ChangeLog for media-video/mplayer2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mplayer2-2.0_p20110904 (04 Sep 2011)

  04 Sep 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110904.ebuild:
  add snapshot

  07 Aug 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20110805.ebuild,
  mplayer2-9999.ebuild:
  sync keywords with portage

*mplayer2-2.0_p20110805 (06 Aug 2011)

  06 Aug 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110805.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  add snapshot, upstream renamed ass option to libass

*mplayer2-2.0_p20110705 (05 Jul 2011)

  05 Jul 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110705.ebuild:
  add snapshot

  01 Jul 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  remove support for internal ffmpeg, cosmetics

  10 May 2011; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild:
  upstream removed xvmc support

  15 Apr 2011; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild,
  metadata.xml:
  update ffmpeg options

  12 Apr 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0.ebuild,
  mplayer2-9999.ebuild:
  fix system-ffmpeg USE, cosmetics

  12 Apr 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0.ebuild,
  mplayer2-9999.ebuild:
  use /etc/mplayer2, add libav support, sync with portage, cosmetics

*mplayer2-2.0 (28 Mar 2011)

  28 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0.ebuild,
  mplayer2-9999.ebuild:
  version bump, license is GPL-3

*mplayer2-2.0_rc2-r2 (24 Mar 2011)

  24 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_rc2-r2.ebuild,
  mplayer2-9999.ebuild:
  migrate to EAPI4, sync with portage

*mplayer2-9999 (16 Mar 2011)
*mplayer2-2.0_rc2-r1 (16 Mar 2011)

  16 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_rc2-r1.ebuild,
  +mplayer2-9999.ebuild, +metadata.xml:
  mplayer-uau -> mplayer2 rename

*mplayer-uau-2.0_rc2 (09 Mar 2011)

  09 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_rc2.ebuild,