@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Oct 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20110904.ebuild,
+  mplayer2-9999.ebuild:
+  OSD menu was removed upstream, add ~ppc ~ppc64 keywords, better REQUIRED_USE
+  usage, fix USE cddb and rsound automagic
+
 *mplayer2-2.0_p20110904 (04 Sep 2011)
 
   04 Sep 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110904.ebuild:
